--- a/index_groups.ipynb
+++ b/index_groups.ipynb
@@ -5,8 +5,8 @@
    "id": "oriented-wedding",
    "metadata": {},
    "source": [
-    "# Index list\n",
-    "## Gets a list of AccuWeather indices"
+    "# Index groups\n",
+    "## Gets a list of AccuWeather index groups"
    ]
   },
   {
